feat: Create basic service worker with workbox build
Create a basic, custom service worker using Google's workbox build. The service worker will be built into the public directory. There are two different files and related commands to produce the service worker during development mode or production mode.

Note: This means ignoring the automatically generated service worker created by Create React App (although this also use workbox). I can't prevent Create React App from automatically creating a service worker even though I'm not using it anymore.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-sw-prod": "node ./src/custom-workbox-sw/build-sw-prod.js",
+    "build-sw-dev": "node ./src/custom-workbox-sw/build-sw-dev.js",
+    "build": "react-scripts build && npm run build-sw-prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -24,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "workbox-build": "^3.6.3"
+  }
 }
